Call DidReflow() on child frames where needed in case of errors. b=366012 r+sr=rbs